[IMP] stock_picking_auto_create_lot_qty: add new functionality
Before:
--------

When creating a complete set, a batch is created automatically for each company, but the sequence was not taken into account

After:
------

When creating a complete set, a batch is created automatically for each company and the sequence is taken into account
This case covered with tests

--- a/stock_picking_auto_create_lot_qty/static/description/index.html
+++ b/stock_picking_auto_create_lot_qty/static/description/index.html
@@ -391,6 +391,9 @@ create lots with certain count for incoming pickings.</p>
 <p>#. Go to a <em>Inventory &gt; Master Data &gt; Products</em>. #. Set ‘auto create
 lot’option and set ‘create lot every’ count of uoms for the products you
 need.</p>
+<p>If you need to create lots for different companies, you can set the
+sequence for the company #. Go to a General Settings &gt; Inventory &gt; Stock
+Serial Lots &gt; Select sequence for current company</p>
 </div>
 <div class="section" id="usage">
 <h1><a class="toc-backref" href="#toc-entry-2">Usage</a></h1>
@@ -400,6 +403,9 @@ product. #. Set auto create lot. #. Go to <em>Inventory &gt; Incoming</em> and
 create one. #. Validate picking without lot. #. If <em>Only multiples
 allowed</em> has been selected in product, picking validation will be
 blocked if qty received is not a multiple of the value set in product.</p>
+<p>If you need to create lots for different companies, you can set the
+sequence for the company #. Go to a General Settings &gt; Inventory &gt; Stock
+Serial Lots &gt; Select sequence for current company</p>
 </div>
 <div class="section" id="bug-tracker">
 <h1><a class="toc-backref" href="#toc-entry-3">Bug Tracker</a></h1>
